clang/test/BSC/Negative/Ownership/Owned/owned_arr/owned_arr.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

typedef struct A {
    _Owned int a; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
} SA;

void test() {
    _Owned int arr1[10]; // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of array cannot qualified by '_Owned}}
    SA arr2[3];         // expected-error {{type of array cannot qualified by '_Owned'(even indirectly), 'SA' (aka 'struct A') contains '_Owned' type}}
    struct A arr[4];    // expected-error {{type of array cannot qualified by '_Owned'(even indirectly), 'struct A' contains '_Owned' type}}
    _Owned int* arr3[2]; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    SA* arr4[3];
    return;
}

void test2() {
    int arr[3];
    int* _Owned p1 = &arr[1];    // expected-error {{incompatible _Owned types, cannot cast 'int *' to 'int *_Owned'}}
}

struct B {
    _Owned int arr1[3];  // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of array cannot qualified by '_Owned'}}
};